--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ select{
 	appearance: none;
 }
 
-input:focus{
+input:focus, textarea:focus, select:focus{
     background-color:  rgb(255, 255, 255);
     border: 2px solid rgb(62, 70, 100);
     transition: .4s;
@@ -135,6 +135,14 @@ input[name*="user_zip"]{
     display: block;
     width: 50%;
     margin: 0 0 1.5rem;
+}
+
+.zip-container{
+    display: flex;
+    width: 65%;
+}
+label[for=zip]{
+    width: 100px;
 }
 
 input[name*="user_newsletter_news"], input[name*="user_css_news"], input[name*="user_javascript_news"], input[name*="user_html_format"], input[name*="user_plain_text_format"]{
@@ -252,7 +260,7 @@ footer > p{
         width: 100%;
     }
     label[for=zip]{
-        width: 200px;
+        width: 195px;
     }
 }
 
